@@ -1,5 +1,10 @@
 2005-01-11  Øyvind Kolås  <pippin@freedesktop.org>
 
+	* src/cairo_xlib_surface.c: (_cairo_xlib_surface_composite): removed
+	accidental addition of debug printf in previous commit.
+
+2005-01-11  Øyvind Kolås  <pippin@freedesktop.org>
+
 	* src/cairo_color.c:
 	* src/cairo_gstate.c: (_cairo_gstate_init):
 	Changed default paint color from opaque white to opaque black.
